--- a/lab07/list.html
+++ b/lab07/list.html
@@ -3,8 +3,8 @@
 <head>
 	<title>河北中学新闻</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-<!-- 	<link rel="stylesheet" type="text/css" href="css/list.css"> -->
+<!-- 	<link rel="stylesheet" type="text/css" href="css/style.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/list.css">
 </head>
 <body>
 <table width="100%" background="images/bg.gif" height="305px">
