--- a/lab07/list.html
+++ b/lab07/list.html
@@ -3,7 +3,7 @@
 <head>
 	<title>河北中学新闻</title>
 	<meta charset="utf-8">
-<!-- 	<link rel="stylesheet" type="text/css" href="css/style.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/list.css">
 </head>
 <body>
