--- a/lab08/daohang2.html
+++ b/lab08/daohang2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 	<title>导航2</title>
@@ -9,11 +9,11 @@
 	<div class="menu">
 		<center><img src="image/header.png"></center>
 		<ul>
-			<li id="green">新闻中心</li>
-			<li>新闻中心</li>
-			<li>新闻中心</li>
-			<li>新闻中心</li>
-			<li>新闻中心</li>
+			<li id="green"><a href="#">新闻中心</a></li>
+			<li><a href="#">新闻中心</a></li>
+			<li><a href="#">新闻中心</a></li>
+			<li><a href="#">新闻中心</a></li>
+			<li><a href="#">新闻中心</a></li>
 		</ul>
 	</div>
 </body>
