--- a/lab11/index.html
+++ b/lab11/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="style.css">
-	<title></title>
+	<title>图片库</title>
 </head>
 <body>
 	<div class="imgage">
