--- a/lab17/bolg.html
+++ b/lab17/bolg.html
@@ -95,7 +95,46 @@
 		</div>
 		</div>
 	</div>
-	
+	<div class="fenge">
+		<div class="pic3">
+			<img src="images/pl1.png">
+		</div>
+	</div>
+	<div id="plk2">
+		<ul>
+			<li>
+			<div class="ppl">
+				<div id="pic">
+					<img src="images/tx1.jpg" class="tx">
+				</div>
+				<div id="text">
+					很有趣
+					<div class="floot">1楼</div>
+				</div>
+				</div>
+			</li>
+			<div class="ppl">
+				<div id="pic">
+					<img src="images/tx1.jpg" class="tx">
+				</div>
+				<div id="text">
+					很有趣
+					<div class="floot">2楼</div>
+				</div>
+				</div>
+			</li>
+			<div class="ppl">
+				<div id="pic">
+					<img src="images/tx1.jpg" class="tx">
+				</div>
+				<div id="text">
+					很有趣
+					<div class="floot">3楼</div>
+				</div>
+				</div>
+			</li>
+		</ul>
+	</div>
 </div>	
 	<div id="fotter">
 	<center>
