--- a/lab041/lab4/code/index.html
+++ b/lab041/lab4/code/index.html
@@ -4,6 +4,7 @@
   <title>图片自动滚动</title>
   <link href="css/style.css" rel="stylesheet" type="text/css"/>
   <script type="text/javascript" src="js/autoChange.js"></script>
+	<meta charset="utf-8">	
  </head>
 
  <body>
