--- a/lab041/lab4/code/index.html
+++ b/lab041/lab4/code/index.html
@@ -3,7 +3,7 @@
  <head>
   <title>图片自动滚动</title>
   <link href="css/style.css" rel="stylesheet" type="text/css"/>
-  <script type="text/javascript" src="autoChange.js"></script>
+  <script type="text/javascript" src="js/autochange.js"></script>
 	<meta charset="utf-8">	
  </head>
 
